[gd_scene load_steps=2 format=2]

[ext_resource path="res://ui/screens/settings/connectionstab.gd" type="Script" id=1]

[node name="Connections" type="Tabs"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 1262.0
margin_bottom = 684.0

[node name="HeaderContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 1252.0
margin_bottom = 74.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ConnectionHelpLabel" type="Label" parent="MarginContainer/VBoxContainer/HeaderContainer"]
margin_right = 1109.0
margin_bottom = 74.0
size_flags_horizontal = 3
size_flags_vertical = 7
size_flags_stretch_ratio = 8.0
text = "These connections can be used by the widgets to connect to third-party services, like Twitch. Click \"+\" to add a new connection. 
Your connection information will be saved in a credentials file encrypted with AES256 and your password."
valign = 1
autowrap = true

[node name="AddButton" type="Button" parent="MarginContainer/VBoxContainer/HeaderContainer"]
margin_left = 1113.0
margin_right = 1252.0
margin_bottom = 74.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "+"

[node name="PanelContainer" type="Panel" parent="MarginContainer/VBoxContainer"]
margin_top = 78.0
margin_right = 1252.0
margin_bottom = 674.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 8.0

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer/PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 8.0

[node name="ConnectionsContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/PanelContainer/ScrollContainer"]
margin_right = 1252.0
margin_bottom = 596.0
size_flags_horizontal = 3
size_flags_vertical = 3

[connection signal="pressed" from="MarginContainer/VBoxContainer/HeaderContainer/AddButton" to="." method="_on_AddButton_pressed"]
